fix icons not showing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -458,7 +458,7 @@
 				text-rendering: auto;
 				line-height: 1;
 				text-transform: none !important;
-				font-family: 'Font Awesome 5 Pro';
+				font-family: 'Font Awesome 6 Pro';
 				font-weight: 900;
 			}
 
@@ -534,7 +534,7 @@
 			text-rendering: auto;
 			line-height: 1;
 			text-transform: none !important;
-			font-family: 'Font Awesome 5 Pro';
+			font-family: 'Font Awesome 6 Pro';
 			font-weight: 400;
 		}
 
@@ -551,7 +551,7 @@
 		}
 
 		.icon.brands:before {
-			font-family: 'Font Awesome 5 Brands';
+			font-family: 'Font Awesome 6 Brands';
 		}
 
 /* List */
@@ -764,7 +764,7 @@
 					text-rendering: auto;
 					line-height: 1;
 					text-transform: none !important;
-					font-family: 'Font Awesome 5 Pro';
+					font-family: 'Font Awesome 6 Pro';
 					font-weight: 400;
 				}
 
